@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.revision3"
        name="Revision3"
-       version="2.0.11" 
+       version="3.0.12" 
        provider-name="stacked">
   <requires>
-    <import addon="xbmc.python" version="2.0"/>
+    <import addon="xbmc.python" version="2.1.0"/>
 	<import addon="script.module.parsedom" version="1.3.0"/>
 	<import addon="script.module.simple.downloader" version="0.9.3"/>
 	<import addon="script.module.buggalo" version="1.1.2"/>
